--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js" integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Realtor</title>
 </head>
 <body>
@@ -35,46 +35,51 @@
         </div>
     </header>
     <div class="container">
-        <div class="jumbotron-container">
-            <div class="jumbotron">
-                <h1 class="header">Homes</h1>
-                <div class="search-homes">
-                    <p>Search availible homes at great prices.</p>
-                    <input class="search" type="search" name="" id="">   
-                </div>
+    <div class="jumbotron-container">
+        <div class="jumbotron">
+            <h1 class="header">Homes</h1>
+            <div class="search-homes">
+                <p>Search availible homes at great prices.</p>
+                <input class="search" type="search" name="" id="">   
             </div>
         </div>
-        <div class="display-area">
-            <div class="homes home"></div>
-            <div class="homes home"></div>
-            <div class="homes home"></div>
+    </div>
+    <div class="display-area">
+        <div class="homes home1"></div>
+        <div class="homes home2"></div>
+        <div class="homes home3"></div>
+        <div class="homes home4"></div>
+        <div class="homes home1"></div>
+        <div class="homes home2"></div>
+        <div class="homes home3"></div>
+        <div class="homes home4"></div>
+    </div>
+    <footer>
+        <div class="general-info">
+            <ul class="general-info-list">
+                <li class="general-info-items"><a href="#">Investors & Media</a></li>
+                <li class="general-info-items"><a href="#">Careers</a></li>
+                <li class="general-info-items"><a href="#">Privacy</a></li>
+                <li class="general-info-items"><a href="#">Realtor Info</a></li>
+                <li class="general-info-items"><a href="#">Site Map</a></li>
+            </ul>
+        <div class="copy">
+            <div>
+                <h3 class="copy-right">Copyright Realtors &copy; 2018</h3>
+            </div>
+            <div>
+                <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
+            </div>
         </div>
-        <footer>
-            <div class="general-info">
-                <ul class="general-info-list">
-                    <li class="general-info-items"><a href="#">Investors & Media</a></li>
-                    <li class="general-info-items"><a href="#">Careers</a></li>
-                    <li class="general-info-items"><a href="#">Privacy</a></li>
-                    <li class="general-info-items"><a href="#">Realtor Info</a></li>
-                    <li class="general-info-items"><a href="#">Site Map</a></li>
-                </ul>
-            <div class="copy">
-                <div>
-                    <h3 class="copy-right">Copyright Realtors &copy; 2018</h3>
-                </div>
-                <div>
-                    <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
-                </div>
-            </div>
-            </div>
-            <div class="social">
-                <li class="social-list"><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
-                <li class="social-list"><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
-                <li class="social-list"><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
-                <li class="social-list"><a href="#"><i class="fab fa-pinterest fa-2x"></i></a></li>                
-            </div>
-        </footer>
-        <div class="filler"></div>
+        </div>
+        <div class="social">
+            <li class="social-list"><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
+            <li class="social-list"><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
+            <li class="social-list"><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
+            <li class="social-list"><a href="#"><i class="fab fa-pinterest fa-2x"></i></a></li>                
+        </div>
+    </footer>
+    <div class="filler"></div>
     </div>
     <script src="index.js"></script>
 </body>
