Adding cards to the main display area.

--- a/index.html
+++ b/index.html
@@ -39,17 +39,22 @@
         <div class="jumbotron">
             <h1 class="header">Homes</h1>
             <div class="search-homes">
-                <p>Search availible homes at great prices.</p>
+                <p class="search-msg">Search availible homes at great prices.</p>
                 <input class="search" type="search" name="" id="">   
             </div>
         </div>
     </div>
     <div class="display-area">
-        <div class="homes home1"></div>
-        <div class="homes home2"></div>
-        <div class="homes home3"></div>
-        <div class="homes home4"></div>
-        <div class="homes home1"></div>
+        <div class="homes home1">
+            <div><img src="img/4bed.jpg" alt=""></div>
+            <div class="description">
+                <p><strong>4 </strong>bd</p>
+                <p><strong>3 </strong>ba</p>
+                <p><strong>2,296 </strong>Sqrft</p>
+                <p><strong>$ </strong>250,000</p>
+            </div>
+            <p class="address">123 Property Lane Alpharetta, GA</p>
+        </div>
         <div class="homes home2"></div>
         <div class="homes home3"></div>
         <div class="homes home4"></div>
