Added cards and horrizontal scrolling to mobile version.

--- a/index.html
+++ b/index.html
@@ -49,15 +49,42 @@
             <div><img src="img/4bed.jpg" alt=""></div>
             <div class="description">
                 <p><strong>4 </strong>bd</p>
-                <p><strong>3 </strong>ba</p>
-                <p><strong>2,296 </strong>Sqrft</p>
-                <p><strong>$ </strong>250,000</p>
+                <p><strong>4 </strong>ba</p>
+                <p><strong>2,350 </strong>Sqrft</p>
+                <p><strong>$ </strong>300,000</p>
             </div>
             <p class="address">123 Property Lane Alpharetta, GA</p>
         </div>
-        <div class="homes home2"></div>
-        <div class="homes home3"></div>
-        <div class="homes home4"></div>
+        <div class="homes home2">
+            <div><img src="img/3bd.jpg" alt=""></div>
+            <div class="description">
+                <p><strong>3 </strong>bd</p>
+                <p><strong>3 </strong>ba</p>
+                <p><strong>2,270 </strong>Sqrft</p>
+                <p><strong>$ </strong>230,000</p>
+            </div>
+            <p class="address">6521 Property Lane Alpharetta, GA</p>
+        </div>
+        <div class="homes home3">
+            <div><img src="img/4bed.jpg" alt=""></div>
+            <div class="description">
+                <p><strong>3 </strong>bd</p>
+                <p><strong>2 </strong>ba</p>
+                <p><strong>2,250 </strong>Sqrft</p>
+                <p><strong>$ </strong>235,000</p>
+            </div>
+            <p class="address">3321 Snt Street Alpharetta, GA</p>
+        </div>
+        <div class="homes home4">
+            <div><img src="img/3bd2.jpg" alt=""></div>
+            <div class="description">
+                <p><strong>4 </strong>bd</p>
+                <p><strong>3 </strong>ba</p>
+                <p><strong>2,300 </strong>Sqrft</p>
+                <p><strong>$ </strong>270,000</p>
+            </div>
+            <p class="address">3361 Snt Street Alpharetta, GA</p>
+        </div>
     </div>
     <footer>
         <div class="general-info">
