Testing out async function and modified some HTML/CSS.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <input class="search" type="search" name="" id="">   
             </div>
         </div>
+        <div class="available"><h3>Available Homes</h3></div>
     </div>
     <div class="display-area">
         <div class="homes home1">
@@ -54,6 +55,7 @@
                 <p><strong>$ </strong>300,000</p>
             </div>
             <p class="address">123 Property Lane Alpharetta, GA</p>
+            <button class="btn2">Learn More</button>
         </div>
         <div class="homes home2">
             <div><img src="img/3bd.jpg" alt=""></div>
@@ -64,9 +66,10 @@
                 <p><strong>$ </strong>230,000</p>
             </div>
             <p class="address">6521 Property Lane Alpharetta, GA</p>
+            <button class="btn2">Learn More</button>
         </div>
         <div class="homes home3">
-            <div><img src="img/4bed.jpg" alt=""></div>
+            <div><img src="img/home.jpg" alt=""></div>
             <div class="description">
                 <p><strong>3 </strong>bd</p>
                 <p><strong>2 </strong>ba</p>
@@ -74,6 +77,7 @@
                 <p><strong>$ </strong>235,000</p>
             </div>
             <p class="address">3321 Snt Street Alpharetta, GA</p>
+            <button class="btn2">Learn More</button>
         </div>
         <div class="homes home4">
             <div><img src="img/3bd2.jpg" alt=""></div>
@@ -84,6 +88,7 @@
                 <p><strong>$ </strong>270,000</p>
             </div>
             <p class="address">3361 Snt Street Alpharetta, GA</p>
+            <button class="btn2">Learn More</button>
         </div>
     </div>
     <footer>
