Added AJAX call to get images from JSON file.

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
     </div>
     <div class="display-area">
         <div class="homes home1">
-            <div><img src="img/4bed.jpg" alt=""></div>
+            <div><img class="home1-img" src="" alt=""></div>
             <div class="description">
                 <p><strong>4 </strong>bd</p>
                 <p><strong>4 </strong>ba</p>
-                <p><strong>2,350 </strong>Sqrft</p>
+                <p><strong>2,370 </strong>Sqrft</p>
                 <p><strong>$ </strong>300,000</p>
             </div>
             <p class="address">123 Property Lane Alpharetta, GA</p>
             <button class="btn2">Learn More</button>
         </div>
         <div class="homes home2">
-            <div><img src="img/3bd.jpg" alt=""></div>
+            <div class="home-holder"><img class="home2-img" src="" alt=""></div>
             <div class="description">
                 <p><strong>3 </strong>bd</p>
                 <p><strong>3 </strong>ba</p>
@@ -69,7 +69,7 @@
             <button class="btn2">Learn More</button>
         </div>
         <div class="homes home3">
-            <div><img src="img/home.jpg" alt=""></div>
+            <div><img class="home3-img" src="" alt=""></div>
             <div class="description">
                 <p><strong>3 </strong>bd</p>
                 <p><strong>2 </strong>ba</p>
@@ -80,7 +80,7 @@
             <button class="btn2">Learn More</button>
         </div>
         <div class="homes home4">
-            <div><img src="img/3bd2.jpg" alt=""></div>
+            <div class="home-holder"><img class="home4-img" src="" alt=""></div>
             <div class="description">
                 <p><strong>4 </strong>bd</p>
                 <p><strong>3 </strong>ba</p>
@@ -88,6 +88,17 @@
                 <p><strong>$ </strong>270,000</p>
             </div>
             <p class="address">3361 Snt Street Alpharetta, GA</p>
+            <button class="btn2">Learn More</button>
+        </div>
+        <div class="homes home5">
+            <div class="home-holder"><img class="home5-img" src="" alt=""></div>
+            <div class="description">
+                <p><strong>4 </strong>bd</p>
+                <p><strong>4 </strong>ba</p>
+                <p><strong>2,350 </strong>Sqrft</p>
+                <p><strong>$ </strong>350,000</p>
+            </div>
+            <p class="address">765 Snt Street Alpharetta, GA</p>
             <button class="btn2">Learn More</button>
         </div>
     </div>
