Fixed scroll bar issue.

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
     <footer>
         <div class="general-info">
             <ul class="general-info-list">
-                <li class="general-info-items"><a href="#">Investors & Media</a></li>
-                <li class="general-info-items"><a href="#">Careers</a></li>
-                <li class="general-info-items"><a href="#">Privacy</a></li>
-                <li class="general-info-items"><a href="#">Realtor Info</a></li>
-                <li class="general-info-items"><a href="#">Site Map</a></li>
+                <li class="general-info-items"><a class="general-info-list-items" href="#">Investors & Media</a></li>
+                <li class="general-info-items"><a class="general-info-list-items" href="#">Careers</a></li>
+                <li class="general-info-items"><a class="general-info-list-items" href="#">Privacy</a></li>
+                <li class="general-info-items"><a class="general-info-list-items" href="#">Realtor Info</a></li>
+                <li class="general-info-items"><a class="general-info-list-items" href="#">Site Map</a></li>
             </ul>
         <div class="copy">
             <div>
