Small changes to HTML/CSS.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <h1 class="header">Homes</h1>
             <div class="search-homes">
                 <p class="search-msg">Search availible homes at great prices.</p>
-                <input class="search" type="search" name="" id="">   
+                <form action="">
+                    <input class="search" type="search" placeholder="Enter a city, zip code, or state.">   
+                </form>
             </div>
         </div>
         <div class="available"><h3>Available Homes</h3></div>
@@ -55,7 +57,7 @@
                 <p><strong>$ </strong>300,000</p>
             </div>
             <p class="address">123 Property Lane Alpharetta, GA</p>
-            <button class="btn2">Learn More</button>
+            <button class="btn2">Learn More</button>    
         </div>
         <div class="homes home2">
             <div class="home-holder"><img class="home2-img" src="" alt=""></div>
