Changed navigation links.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
                 <div class="toggler"><a class="menu" href="#"><i class="fa fa-bars"></i></a></div>
             </div>
             <div class="bottom-logo"><h3 class="bottom-logo-txt">Find Homes Now</h3></div>
-            <nav>
+            <nav class="main-nav">
                 <ul class="nav-list">
                     <li class="nav-items"><a class="nav-links" href="#">Find Your Home</a></li>
+                </ul>
+                <ul class="nav-list">
                     <li class="nav-items"><a class="nav-links"href="#">The Realtor's Difference</a></li>
+                </ul>
+                <ul class="nav-list">
                     <li class="nav-items"><a class="nav-links"href="#">How It Works</a></li>
+                </ul>
+                <ul class="nav-list">
                     <li class="nav-items"><a class="nav-links"href="#">More</a></li>
+                </ul>
+                <ul class="nav-list">
                     <li class="nav-items"><a class="nav-links"href="#">Contact</a></li>
+                </ul>
                 </ul>
             </nav>
         </div>
