Added boxwhere maps will be.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         </div>
     </div>
     <footer>
+            <div class="google-maps"><div class="stuff">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro tenetur cum voluptate non. Quam eveniet assumenda quaerat a. Aliquam fugiat, quo nisi aut temporibus ducimus harum recusandae voluptatibus aspernatur voluptatum corporis veritatis exercitationem similique sequi dolorem molestias dolores quos ex ad, error illo? Reprehenderit voluptates dolorum asperiores ea unde modi? Fugit architecto amet corrupti accusamus mollitia doloribus molestiae pariatur cupiditate. Recusandae animi repellat molestiae officia velit suscipit beatae reiciendis minus! Fugit aliquid temporibus distinctio soluta laudantium dolorum optio vitae in ullam, sapiente, dolorem ipsum ut provident ea eligendi voluptatum odio aut possimus non vel reprehenderit. Odit adipisci perspiciatis modi vel!</div></div>
         <div class="general-info">
             <ul class="general-info-list">
                 <li class="general-info-items"><a class="general-info-list-items" href="#">Investors & Media</a></li>
