--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js" integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js" integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="style.css">
     <title>Realtor</title>
 </head>
+
 <body>
     <header>
         <div class="wrapper">
@@ -18,129 +21,135 @@
                 <div class="my-fav"><button class="btn">My Favorite</button></div>
             </div>
             <div class="header">
-                <div><li class="logo" ><a href="index.html">Realtors</a></li></div>
+                <div>
+                    <li class="logo"><a href="index.html">Realtors</a></li>
+                </div>
                 <span class="spacer"></span>
                 <div class="toggler"><a class="menu" href="#"><i class="fa fa-bars"></i></a></div>
             </div>
-            <div class="bottom-logo"><h3 class="bottom-logo-txt">Find Homes Now</h3></div>
+            <div class="bottom-logo">
+                <h3 class="bottom-logo-txt">Find Homes Now</h3>
+            </div>
             <nav class="main-nav">
                 <ul class="nav-list">
                     <li class="nav-items"><a class="nav-links" href="#">Find Your Home</a></li>
                 </ul>
                 <ul class="nav-list">
-                    <li class="nav-items"><a class="nav-links"href="#">The Realtor's Difference</a></li>
+                    <li class="nav-items"><a class="nav-links" href="#">The Realtor's Difference</a></li>
                 </ul>
                 <ul class="nav-list">
-                    <li class="nav-items"><a class="nav-links"href="#">How It Works</a></li>
+                    <li class="nav-items"><a class="nav-links" href="#">How It Works</a></li>
                 </ul>
                 <ul class="nav-list">
-                    <li class="nav-items"><a class="nav-links"href="#">More</a></li>
+                    <li class="nav-items"><a class="nav-links" href="#">More</a></li>
                 </ul>
                 <ul class="nav-list">
-                    <li class="nav-items"><a class="nav-links"href="#">Contact</a></li>
+                    <li class="nav-items"><a class="nav-links" href="#">Contact</a></li>
                 </ul>
                 </ul>
             </nav>
         </div>
     </header>
     <div class="container">
-    <div class="jumbotron-container">
-        <div class="jumbotron">
-            <h1 class="header">Homes</h1>
-            <div class="search-homes">
-                <p class="search-msg">Search availible homes at great prices.</p>
-                <form action="">
-                    <input class="search" type="search" placeholder="Enter a city, zip code, or state.">   
-                </form>
+        <div class="jumbotron-container">
+            <div class="jumbotron">
+                <h1 class="header">Homes</h1>
+                <div class="search-homes">
+                    <p class="search-msg">Search availible homes at great prices.</p>
+                    <form action="">
+                        <input class="search" type="search" placeholder="Enter a city, zip code, or state.">
+                    </form>
+                </div>
+            </div>
+            <div class="available">
+                <h3>Available Homes</h3>
             </div>
         </div>
-        <div class="available"><h3>Available Homes</h3></div>
-    </div>
-    <div class="display-area">
-        <div class="homes home1">
-            <div><img class="home1-img" src="" alt=""></div>
-            <div class="description">
-                <p><strong>4 </strong>bd</p>
-                <p><strong>4 </strong>ba</p>
-                <p><strong>2,370 </strong>Sqrft</p>
-                <p><strong>$ </strong>300,000</p>
+        <div class="display-area">
+            <div class="homes home1">
+                <div><img class="home1-img" src="" alt=""></div>
+                <div class="description">
+                    <p><strong>4 </strong>bd</p>
+                    <p><strong>4 </strong>ba</p>
+                    <p><strong>2,370 </strong>Sqrft</p>
+                    <p><strong>$ </strong>300,000</p>
+                </div>
+                <p class="address">123 Property Lane Alpharetta, GA</p>
+                <button class="btn2">Learn More</button>
             </div>
-            <p class="address">123 Property Lane Alpharetta, GA</p>
-            <button class="btn2">Learn More</button>    
-        </div>
-        <div class="homes home2">
-            <div class="home-holder"><img class="home2-img" src="" alt=""></div>
-            <div class="description">
-                <p><strong>3 </strong>bd</p>
-                <p><strong>3 </strong>ba</p>
-                <p><strong>2,270 </strong>Sqrft</p>
-                <p><strong>$ </strong>230,000</p>
+            <div class="homes home2">
+                <div class="home-holder"><img class="home2-img" src="" alt=""></div>
+                <div class="description">
+                    <p><strong>3 </strong>bd</p>
+                    <p><strong>3 </strong>ba</p>
+                    <p><strong>2,270 </strong>Sqrft</p>
+                    <p><strong>$ </strong>230,000</p>
+                </div>
+                <p class="address">6521 Property Lane Alpharetta, GA</p>
+                <button class="btn2">Learn More</button>
             </div>
-            <p class="address">6521 Property Lane Alpharetta, GA</p>
-            <button class="btn2">Learn More</button>
-        </div>
-        <div class="homes home3">
-            <div><img class="home3-img" src="" alt=""></div>
-            <div class="description">
-                <p><strong>3 </strong>bd</p>
-                <p><strong>2 </strong>ba</p>
-                <p><strong>2,250 </strong>Sqrft</p>
-                <p><strong>$ </strong>235,000</p>
+            <div class="homes home3">
+                <div><img class="home3-img" src="" alt=""></div>
+                <div class="description">
+                    <p><strong>3 </strong>bd</p>
+                    <p><strong>2 </strong>ba</p>
+                    <p><strong>2,250 </strong>Sqrft</p>
+                    <p><strong>$ </strong>235,000</p>
+                </div>
+                <p class="address">3321 Snt Street Alpharetta, GA</p>
+                <button class="btn2">Learn More</button>
             </div>
-            <p class="address">3321 Snt Street Alpharetta, GA</p>
-            <button class="btn2">Learn More</button>
-        </div>
-        <div class="homes home4">
-            <div class="home-holder"><img class="home4-img" src="" alt=""></div>
-            <div class="description">
-                <p><strong>4 </strong>bd</p>
-                <p><strong>3 </strong>ba</p>
-                <p><strong>2,300 </strong>Sqrft</p>
-                <p><strong>$ </strong>270,000</p>
+            <div class="homes home4">
+                <div class="home-holder"><img class="home4-img" src="" alt=""></div>
+                <div class="description">
+                    <p><strong>4 </strong>bd</p>
+                    <p><strong>3 </strong>ba</p>
+                    <p><strong>2,300 </strong>Sqrft</p>
+                    <p><strong>$ </strong>270,000</p>
+                </div>
+                <p class="address">3361 Snt Street Alpharetta, GA</p>
+                <button class="btn2">Learn More</button>
             </div>
-            <p class="address">3361 Snt Street Alpharetta, GA</p>
-            <button class="btn2">Learn More</button>
-        </div>
-        <div class="homes home5">
-            <div class="home-holder"><img class="home5-img" src="" alt=""></div>
-            <div class="description">
-                <p><strong>4 </strong>bd</p>
-                <p><strong>4 </strong>ba</p>
-                <p><strong>2,350 </strong>Sqrft</p>
-                <p><strong>$ </strong>350,000</p>
-            </div>
-            <p class="address">765 Snt Street Alpharetta, GA</p>
-            <button class="btn2">Learn More</button>
-        </div>
-    </div>
-    <footer>
-            <div class="google-maps"><div class="stuff">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro tenetur cum voluptate non. Quam eveniet assumenda quaerat a. Aliquam fugiat, quo nisi aut temporibus ducimus harum recusandae voluptatibus aspernatur voluptatum corporis veritatis exercitationem similique sequi dolorem molestias dolores quos ex ad, error illo? Reprehenderit voluptates dolorum asperiores ea unde modi? Fugit architecto amet corrupti accusamus mollitia doloribus molestiae pariatur cupiditate. Recusandae animi repellat molestiae officia velit suscipit beatae reiciendis minus! Fugit aliquid temporibus distinctio soluta laudantium dolorum optio vitae in ullam, sapiente, dolorem ipsum ut provident ea eligendi voluptatum odio aut possimus non vel reprehenderit. Odit adipisci perspiciatis modi vel!</div></div>
-        <div class="general-info">
-            <ul class="general-info-list">
-                <li class="general-info-items"><a class="general-info-list-items" href="#">Investors & Media</a></li>
-                <li class="general-info-items"><a class="general-info-list-items" href="#">Careers</a></li>
-                <li class="general-info-items"><a class="general-info-list-items" href="#">Privacy</a></li>
-                <li class="general-info-items"><a class="general-info-list-items" href="#">Realtor Info</a></li>
-                <li class="general-info-items"><a class="general-info-list-items" href="#">Site Map</a></li>
-            </ul>
-        <div class="copy">
-            <div>
-                <h3 class="copy-right">Copyright Realtors &copy; 2018</h3>
-            </div>
-            <div>
-                <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
+            <div class="homes home5">
+                <div class="home-holder"><img class="home5-img" src="" alt=""></div>
+                <div class="description">
+                    <p><strong>4 </strong>bd</p>
+                    <p><strong>4 </strong>ba</p>
+                    <p><strong>2,350 </strong>Sqrft</p>
+                    <p><strong>$ </strong>350,000</p>
+                </div>
+                <p class="address">765 Snt Street Alpharetta, GA</p>
+                <button class="btn2">Learn More</button>
             </div>
         </div>
-        </div>
-        <div class="social">
-            <li class="social-list"><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
-            <li class="social-list"><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
-            <li class="social-list"><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
-            <li class="social-list"><a href="#"><i class="fab fa-pinterest fa-2x"></i></a></li>                
-        </div>
-    </footer>
-    <div class="filler"></div>
+        <footer>
+            <div class="general-info">
+                <ul class="general-info-list">
+                    <li class="general-info-items"><a class="general-info-list-items" href="#">Investors & Media</a></li>
+                    <li class="general-info-items"><a class="general-info-list-items" href="#">Careers</a></li>
+                    <li class="general-info-items"><a class="general-info-list-items" href="#">Privacy</a></li>
+                    <li class="general-info-items"><a class="general-info-list-items" href="#">Realtor Info</a></li>
+                    <li class="general-info-items"><a class="general-info-list-items" href="#">Site Map</a></li>
+                </ul>
+                <div class="copy">
+                    <div>
+                        <h3 class="copy-right">Copyright Realtors &copy; 2018</h3>
+                    </div>
+                    <div>
+                        <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="social">
+                <li class="social-list"><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
+                <li class="social-list"><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
+                <li class="social-list"><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
+                <li class="social-list"><a href="#"><i class="fab fa-pinterest fa-2x"></i></a></li>
+            </div>
+        </footer>
+        <div class="filler"></div>
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
